--- a/slider/index.html
+++ b/slider/index.html
@@ -24,6 +24,7 @@ body {
 .slider {
   position: relative;
   width: 100vw;
+  height: 100vh;
   overflow: hidden;
 }
 
@@ -32,7 +33,6 @@ body {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
   opacity: 0;
   transition: opacity 0.4s ease-in-out;
 }
