--- a/slider/index.html
+++ b/slider/index.html
@@ -32,8 +32,8 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: auto;
+  width: auto;
+  height: 100%;
   opacity: 0;
   transition: opacity 0.4s ease-in-out;
 }
