--- a/slider/index.html
+++ b/slider/index.html
@@ -29,12 +29,11 @@ body {
 }
 
 .slide {
-  object-fit: cover;
   position: absolute;
   top: 0;
   left: 0;
-  width: auto;
-  height: 100%;
+  width: 100%;
+  height: auto;
   opacity: 0;
   transition: opacity 0.4s ease-in-out;
 }
@@ -46,17 +45,17 @@ body {
 
 .slide:first-child {
   background: url("1.jpg") no-repeat
-    center top/contain;
+    center top/cover;
 }
 
 .slide:nth-child(2) {
   background: url("2.jpg") no-repeat
-    center top/contain;
+    center top/cover;
 }
 
 .slide:nth-child(3) {
   background: url("3.jpg") no-repeat
-    center top/contain;
+    center top/cover;
 }
 
 
