--- a/slider/index.html
+++ b/slider/index.html
@@ -33,7 +33,7 @@ body {
   top: 0;
   left: 0;
   width: 100%;
-  height: auto;
+  height: 100%;
   opacity: 0;
   transition: opacity 0.4s ease-in-out;
 }
